final styling adjustments and fixed spacing in the nav

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,12 +7,16 @@ body, html {
   padding: 0;
   margin: 0;
   font-family: sans-serif;
-  color: #333;
+  color: green;
+}
+
+body {
+  background-color: lightgreen;
 }
 
 a {
   text-decoration: none;
-  color: #225ca3;
+  color: blueviolet;
   font-weight: bold;
   transition: color .1s;
 }
@@ -80,6 +84,13 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 0 1%;
+  margin-top: 15px;
+}
+
+nav a {
+  padding-right: 10px;
+  padding-bottom: 10px;
+  color: blueviolet
 }
 
 header h1 {
@@ -107,6 +118,10 @@ main {
 .btn-no-style:hover {
   background: none;
   color: #3486eb;
+}
+
+.logout-btn {
+  color: blueviolet;
 }
 
 .delete-post-btn {
